# Simple-learning-perceptron

./: CMakeLists.txt  main.cpp  transfer.cpp
include/: Layer.hpp  MLPerceptron.hpp  Neuron.hpp  functions.hpp
